--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-name: astrbot_plugin_orlando # 插件唯一识别名，以 astrbot_plugin_ 前缀开头
-display_name: Orlando Assistant # 用于展示的名字，可以是方便人类阅读的名字（需要版本 >= v4.5.0，低版本不会报错，请放心填写）
-desc: Orlando 助手 # 插件简短描述
-version: v1.0.0 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Orlando # 作者
-repo: https://github.com/kclx/astrbot_plugin_orlando # 插件的仓库地址
+name: astrbot_plugin_orlando
+display_name: Orlando Assistant
+desc: Orlando 助手
+version: v1.0.0
+author: Orlando
+repo: https://github.com/kclx/astrbot_plugin_orlando
